--- a/Miercoles/index.html
+++ b/Miercoles/index.html
@@ -24,7 +24,7 @@
             <p>Producción Audiovisual</p>
     <hr>
         <p>
-            <img src="Imagenes/istockphoto-1278975233-612x612.jpg" alt="Imagen de Istock">
+            <img src="Imagenes/istockphoto-1278975233-612x612.jpg" alt="">
             <img src="Imagenes/18-1650502700.webp" alt="">
         </p>
 <hr>
